# game_ai

./: intro-to-py.txt
ataxx/: ataxx.java
cartpole/: myQL.py  sample_QL.py  upload_sample.py
game_platform/: compile.sh
game_platform/ai_codes/FTL/: FTL  FightTheLandlord.cpp
game_platform/src/: CMakeLists.txt  Makefile  test.cpp  test2.cpp
game_platform/src/envs/: Agents.cpp  Agents.h  CMakeLists.txt  FightTheLandlord.cpp  FightTheLandlord.h  elements.cpp  elements.h
game_platform/src/factories/: AgentFactory.cpp  AgentFactory.hpp  CMakeLists.txt
game_platform/src/utils/: CMakeLists.txt  FTLCards.hpp
pong/: myPong.py
